# emerald

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  VERSION  autogen.sh  configure.ac  emerald.po  emerald.spec
debian/: changelog  control  copyright  rules
defaults/: Makefile.am  settings.ini
defaults/theme/: Makefile.am  theme.ini
doc/: Makefile.am  emerald-theme-manager.1  emerald.1
engines/: Makefile.am  legacy.c  legacy_icon.h  line.c  oxygen.c  oxygen_icon.h  pixmap.c  pixmap_icon.h  truglass.c  truglass_icon.h  vrunner.c  vrunner_icon.h  zootreeves.c  zootreeves_icon.h
icons/: Makefile.am
include/: Makefile.am  emerald.h  engine.h  libengine.h  titlebar.h
libengine/: Makefile.am  emerald.c  emeraldengine.pc.in  themer.c
misc/: Makefile.am  emerald-theme-manager.desktop  emerald.mime  emerald.xml
pixmaps/: Makefile.am
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  be.po  bn.po  bn_IN.po  ca.po  ca_ES.po  cs.po  da.po  de.po  de_DE.po  el.po  emerald.pot  en_GB.po  es.po  es_AR.po  es_ES.po  eu.po  fa.po  fi.po  fr.po  fr_FR.po  gl.po  gu.po  gu_IN.po  he.po  hi.po  hr.po  hu.po  hu_HU.po  it.po  it_IT.po  ja.po  ja_JP.po  ka.po  ko.po  (+21 more)
scripts/: Makefile.am  compiz-decorator-emerald  compiz-lxde-emerald  compiz-lxde-emerald.desktop.in  compiz-mate-emerald  compiz-mate-emerald.desktop.in  compiz-xfce-emerald  compiz-xfce-emerald.desktop.in  emerald-decorator.desktop.in
src/: Makefile.am  engine_loader.c  main.c
themer/: Makefile.am  main.c
