## Process this file with automake to produce Makefile.in
INCLUDES = -I$(top_srcdir)/include
SUBDIRS = \
		  libengine \
		  src \
		  include \
		  engines \
		  themer \
		  pixmaps \
		  misc \
		  defaults \
		  doc \
		  po

EXTRA_DIST =			\
	intltool-extract.in \
	intltool-merge.in   \
	intltool-update.in

DISTCLEANFILES =     \
  	intltool-extract \
	intltool-merge   \
	intltool-update  
