AM_CPPFLAGS = -I$(top_srcdir)/include

ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS =		\
	libengine	 \
	src		 \
	include		 \
	engines		 \
	themer		 \
	icons		 \
	misc		 \
	defaults	 \
	doc		 \
	po

EXTRA_DIST =		   \
	AUTHORS		    \
	COPYING		    \
	NEWS		    \
	README.md	    \
	autogen.sh	    \
	intltool-extract.in \
	intltool-merge.in   \
	intltool-update.in

DISTCLEANFILES =		\
	po/stamp-it		 \
	intltool-extract	 \
	intltool-merge		 \
	intltool-update		 \
	po/.intltool-merge-cache
