## Process this file with automake to produce Makefile.in
defthemedir = $(datadir)/emerald/theme
deftheme_DATA = \
    theme.ini \
    theme.screenshot.png \
    buttons.above.png \
    buttons.close.png \
    buttons.glow.png \
    buttons.help.png \
    buttons.inactive_glow.png \
    buttons.max.png \
    buttons.menu.png \
    buttons.min.png \
    buttons.restore.png \
    buttons.shade.png \
    buttons.sticky.png \
    buttons.unabove.png \
    buttons.unshade.png \
    buttons.unsticky.png

EXTRA_DIST = $(deftheme_DATA)
